nova_tests/plan103_2/negative/atomic_isize_no_such_method_neg.nv
// Plan 103.2 Ф.9 negative — non-existent method on AtomicIsize.
//
// EXPECT_CC_ERROR no member named 'count_ones'
//
// `a.count_ones()` (popcount) is not part of the atomic API — it's a
// pure arithmetic operation, not applicable to atomic types.
// Codegen emits a member access of `count_ones` on `Nova_AtomicIsize`
// → clang error: "no member named 'count_ones' in 'Nova_AtomicIsize'".

module nova_tests.plan103_2.negative.atomic_isize_no_such_method_neg

fn bad(a AtomicIsize) -> int => a.count_ones()

test "should not compile" {
    mut a = AtomicIsize.new(42)
    ro _ = bad(a)
    assert(true)
}
